--- a/HW1/hw1_code_and_report.ipynb
+++ b/HW1/hw1_code_and_report.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Домашнее задание по имууногеномике. __Basic analysis of antibody sequences__\n",
+    "## Домашнее задание по иммуногеномике. __Basic analysis of antibody sequences__\n",
     "\n",
     "__ИБ. осень 2020.__\n",
     "__Чангалиди Антон__\n",
