--- a/HW2/hw_2_code_and_report.ipynb
+++ b/HW2/hw_2_code_and_report.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Домашнее задание по имууногеномике. __Constructing clonal lineages__\n",
+    "## Домашнее задание по иммуногеномике. __Constructing clonal lineages__\n",
     "\n",
     "__ИБ. осень 2020.__\n",
     "__Чангалиди Антон__\n",
@@ -188,123 +188,6 @@
    "metadata": {},
    "source": [
     "Так как HD будем считать только для строк одинаковой длины, сгруппируем их и создадим для каждой длины свой лист: так мы будем перебирать не $n^2$ пар, а в разы меньше - __оптимизация №1__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cdr3</th>\n",
-       "      <th>length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5089</th>\n",
-       "      <td>GCGAGAGATTATAAC</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1029</th>\n",
-       "      <td>GCGAGAGATTATAAA</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2949</th>\n",
-       "      <td>GCGAGAGATTATAAC</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>144</th>\n",
-       "      <td>GCGAGAGATTATAAA</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4345</th>\n",
-       "      <td>GCGAGAGATTATAAA</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9060</th>\n",
-       "      <td>GCGAGAGTTGAACAGGGCGGTCACTGGCATTGTGTGGTGGTGACTG...</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7951</th>\n",
-       "      <td>GCGAGAGTTGAACAGGGCGATCACTGGCATTGTGTGGTGGTGACTG...</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9477</th>\n",
-       "      <td>GCGAGAGTTGAACAGGGCGATCACTGGCATTGTGTGGTGGTGACTG...</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9845</th>\n",
-       "      <td>GCGAGAGTTGAACAGGGCGATCACTGGCATTGTGTGGTGGTGACTG...</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7686</th>\n",
-       "      <td>GCGAGACATGTACGAAGGGGCGAGTGGCTGGCGCGGGAAATTGCCT...</td>\n",
-       "      <td>117</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10000 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   cdr3  length\n",
-       "5089                                    GCGAGAGATTATAAC      15\n",
-       "1029                                    GCGAGAGATTATAAA      15\n",
-       "2949                                    GCGAGAGATTATAAC      15\n",
-       "144                                     GCGAGAGATTATAAA      15\n",
-       "4345                                    GCGAGAGATTATAAA      15\n",
-       "...                                                 ...     ...\n",
-       "9060  GCGAGAGTTGAACAGGGCGGTCACTGGCATTGTGTGGTGGTGACTG...      85\n",
-       "7951  GCGAGAGTTGAACAGGGCGATCACTGGCATTGTGTGGTGGTGACTG...      85\n",
-       "9477  GCGAGAGTTGAACAGGGCGATCACTGGCATTGTGTGGTGGTGACTG...      85\n",
-       "9845  GCGAGAGTTGAACAGGGCGATCACTGGCATTGTGTGGTGGTGACTG...      85\n",
-       "7686  GCGAGACATGTACGAAGGGGCGAGTGGCTGGCGCGGGAAATTGCCT...     117\n",
-       "\n",
-       "[10000 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_cdr3[:]"
    ]
   },
   {
